--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
       overflow-x:hidden;
     }
 
+    /* Content always above effects */
+    .wrap{max-width:1120px;margin:0 auto;padding:26px 16px 70px; position:relative; z-index:10;}
+
+    /* Logo veil (uses apex-sigil.png if present in same folder) */
     body:before{
       content:"";
       position:fixed;
@@ -49,27 +53,36 @@
       background-repeat:no-repeat;
       background-size: 1100px auto;
       background-position: 50% 22%;
-      opacity:.22;
+      opacity:.20;
       pointer-events:none;
-      z-index:-2;
+      z-index:1;
       transform: translateZ(0);
+      filter: saturate(1.05) contrast(1.02);
     }
+
+    /* Mist film */
     body:after{
       content:"";
-      position:fixed; inset:0;
+      position:fixed;
+      inset:0;
       background:
-        radial-gradient(circle at 20% 30%, rgba(255,255,255,.08) 1px, transparent 1.2px),
-        radial-gradient(circle at 65% 55%, rgba(255,255,255,.06) 1px, transparent 1.2px),
-        radial-gradient(circle at 80% 25%, rgba(255,255,255,.05) 1px, transparent 1.2px);
-      background-size: 220px 220px, 260px 260px, 320px 320px;
-      opacity:.22;
+        radial-gradient(900px 420px at 50% 15%, rgba(214,179,90,.08), transparent 62%),
+        radial-gradient(900px 520px at 55% 65%, rgba(106,168,255,.06), transparent 62%),
+        linear-gradient(180deg, rgba(0,0,0,.18), rgba(0,0,0,.40));
+      opacity:.55;
       pointer-events:none;
-      z-index:-1;
-      animation: drift 18s linear infinite;
+      z-index:2;
     }
-    @keyframes drift{ from{transform:translate3d(0,0,0)} to{transform:translate3d(-120px, 80px,0)} }
 
-    .wrap{max-width:1120px;margin:0 auto;padding:26px 16px 70px}
+    /* REAL MOVING PARTICLES CANVAS */
+    #apexParticles{
+      position:fixed;
+      inset:0;
+      z-index:3;
+      pointer-events:none;
+      opacity:.40;
+      mix-blend-mode:screen;
+    }
 
     .topbar{display:flex;align-items:center;justify-content:space-between;gap:14px;margin-bottom:14px}
     .brand{display:flex;align-items:center;gap:12px;min-width:0}
@@ -100,6 +113,7 @@
       box-shadow: 0 12px 26px rgba(0,0,0,.30);
       font-size:12px; user-select:none;
       text-decoration:none;
+      position:relative; z-index:1;
     }
     .dot{width:9px;height:9px;border-radius:50%;background:var(--ok);box-shadow:0 0 0 4px rgba(52,211,153,.12)}
     .mono{font-family:var(--mono)}
@@ -115,6 +129,7 @@
       box-shadow: var(--shadow);
       position:relative;
       overflow:hidden;
+      transform: translateZ(0);
     }
     .panel:before{
       content:""; position:absolute; inset:0;
@@ -146,13 +161,25 @@
       padding:14px;
       position:relative;
       overflow:hidden;
+      transform: translateZ(0);
+    }
+    /* 3D edge */
+    .card:before{
+      content:"";
+      position:absolute; inset:0;
+      background:
+        radial-gradient(600px 200px at 18% 0%, rgba(214,179,90,.10), transparent 60%),
+        radial-gradient(600px 220px at 82% 0%, rgba(106,168,255,.10), transparent 60%);
+      opacity:.55;
+      pointer-events:none;
     }
 
-    .tagrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px}
+    .tagrow{display:flex;gap:10px;flex-wrap:wrap;margin-top:12px; position:relative; z-index:1;}
     .tag{
       padding:10px 12px;border-radius:999px;border:1px solid rgba(255,255,255,.12);
       background: rgba(0,0,0,.18);
       font-size:12px;color:var(--muted);
+      position:relative; z-index:1;
     }
 
     .btn{
@@ -162,6 +189,7 @@
       background: linear-gradient(135deg, var(--gold), var(--gold2));
       box-shadow: 0 16px 34px rgba(214,179,90,.18);
       transition: transform .10s ease, filter .10s ease;
+      position:relative; z-index:1;
     }
     .btn:hover{transform: translateY(-1px); filter: brightness(1.03)}
     .btn:active{transform: translateY(0px); filter: brightness(.98)}
@@ -172,6 +200,7 @@
       border:1px solid rgba(255,255,255,.14);
       backdrop-filter: blur(10px);
       transition: transform .10s ease, border-color .10s ease;
+      position:relative; z-index:1;
     }
     .btn2:hover{transform: translateY(-1px); border-color: rgba(214,179,90,.35)}
     .btn2:active{transform: translateY(0px)}
@@ -187,25 +216,98 @@
       padding:12px 12px;
       outline:none;
       font-size:13px;
+      position:relative; z-index:1;
     }
     input::placeholder{color: rgba(255,255,255,.40)}
 
-    .kv{display:grid;gap:10px}
+    .kv{display:grid;gap:10px; position:relative; z-index:1;}
     .k{
       border-radius:14px;border:1px solid rgba(255,255,255,.12);
       background: rgba(0,0,0,.16);
       padding:12px;
+      position:relative; z-index:1;
     }
     .k .t{font-size:11px;letter-spacing:.14em;text-transform:uppercase;color:rgba(255,255,255,.58)}
     .k .v{margin-top:8px;font-weight:900}
     .v.dim{color:rgba(255,255,255,.75)}
     .v.ok{color:var(--ok)}
-    .footer{margin-top:14px;color:var(--muted);font-size:12px;line-height:1.5;padding:0 4px}
+    .v.warn{color:var(--warn)}
+    .v.bad{color:var(--bad)}
+
+    .footer{margin-top:14px;color:var(--muted);font-size:12px;line-height:1.5;padding:0 4px; position:relative; z-index:1;}
     .footer a{color:rgba(214,179,90,.95);text-decoration:none;border-bottom:1px dashed rgba(214,179,90,.35)}
+
+    /* NEW: Witness log */
+    .log{
+      margin-top:12px;
+      border-radius:14px;
+      border:1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.14);
+      overflow:hidden;
+      position:relative; z-index:1;
+    }
+    .logHead{
+      padding:10px 12px;
+      border-bottom:1px solid rgba(255,255,255,.10);
+      display:flex;align-items:center;justify-content:space-between;gap:10px;
+      background: rgba(0,0,0,.16);
+    }
+    .logHead .t{
+      font-size:11px;letter-spacing:.14em;text-transform:uppercase;color:rgba(255,255,255,.58)
+    }
+    .logBody{
+      max-height: 240px;
+      overflow:auto;
+    }
+    table{
+      width:100%;
+      border-collapse:collapse;
+      font-size:12.5px;
+    }
+    thead th{
+      text-align:left;
+      font-size:11px;
+      letter-spacing:.14em;
+      text-transform:uppercase;
+      color:rgba(255,255,255,.52);
+      padding:10px 12px;
+      border-bottom:1px solid rgba(255,255,255,.10);
+      background: rgba(0,0,0,.14);
+      position:sticky; top:0;
+    }
+    tbody td{
+      padding:10px 12px;
+      border-bottom:1px solid rgba(255,255,255,.06);
+      color:rgba(255,255,255,.86);
+      vertical-align:top;
+      font-family: var(--mono);
+      word-break:break-word;
+    }
+    tbody tr:hover{background: rgba(106,168,255,.06);}
+
+    .badge{
+      display:inline-flex;align-items:center;gap:8px;
+      padding:8px 10px;border-radius:999px;
+      border:1px solid rgba(255,255,255,.12);
+      background: rgba(0,0,0,.14);
+      font-size:12px;
+      color:rgba(255,255,255,.82);
+    }
+    .pulse{
+      width:8px;height:8px;border-radius:50%;
+      background: var(--ok);
+      box-shadow: 0 0 0 4px rgba(52,211,153,.12);
+      animation: pulse 1.8s ease-in-out infinite;
+    }
+    @keyframes pulse{0%,100%{transform:scale(1)}50%{transform:scale(1.35)}}
   </style>
 </head>
 
 <body>
+
+  <!-- MOVING PARTICLES LAYER -->
+  <canvas id="apexParticles" aria-hidden="true"></canvas>
+
   <div class="wrap">
     <div class="topbar">
       <div class="brand">
@@ -216,7 +318,7 @@
         </div>
       </div>
       <div class="pillrow">
-        <div class="pill"><span class="dot"></span><span class="mono" id="live">LIVE • registration</span></div>
+        <div class="pill"><span class="pulse"></span><span class="mono" id="live">LIVE • registry</span></div>
         <a class="pill" href="https://kawal393.github.io/" style="text-decoration:none">
           <span class="muted">APEX</span>&nbsp;<span class="gold">PORTAL</span>
         </a>
@@ -247,7 +349,7 @@
       <section class="card">
         <label>Enter — Registry</label>
 
-        <div style="display:grid;gap:10px;margin-top:10px">
+        <div style="display:grid;gap:10px;margin-top:10px; position:relative; z-index:1;">
           <div>
             <label for="email">Email (required)</label>
             <input id="email" placeholder="you@domain.com" autocomplete="email"/>
@@ -258,10 +360,33 @@
           </div>
         </div>
 
-        <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:space-between;margin-top:12px">
+        <div style="display:flex;gap:10px;flex-wrap:wrap;align-items:center;justify-content:space-between;margin-top:12px; position:relative; z-index:1;">
           <button class="btn" id="enter">ENTER PROTOCOL</button>
           <button class="btn2" id="seal">SEAL (DEMO)</button>
           <div class="tag" id="hint">Validation required. Registration creates a durable entry.</div>
+        </div>
+
+        <!-- NEW: Witness log + export -->
+        <div class="log">
+          <div class="logHead">
+            <div class="t">Witness Log (local)</div>
+            <div style="display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end">
+              <button class="btn2" id="export">Export CSV</button>
+              <button class="btn2" id="wipe">Wipe Local</button>
+            </div>
+          </div>
+          <div class="logBody">
+            <table>
+              <thead>
+                <tr>
+                  <th style="width:140px">Timestamp</th>
+                  <th style="width:220px">Email (hashed)</th>
+                  <th>Name</th>
+                </tr>
+              </thead>
+              <tbody id="logRows"></tbody>
+            </table>
+          </div>
         </div>
 
         <div class="footer" style="padding:0;margin-top:12px">
@@ -288,15 +413,15 @@
 
         <div class="footer" style="padding:0;margin-top:12px">
           Surface Nodes:
-          <a href="https://kawal393.github.io/apex-corporate-translator/">Corporate Translator</a> •
-          <a href="https://kawal393.github.io/ndis-signal-board/">NDIS Watchtower</a>
+          <a href="https://kawal393.github.io/apex-corporate-translator/">APEX Corporate Translator</a> •
+          <a href="https://kawal393.github.io/ndis-signal-board/">APEX NDIS Watchtower</a>
         </div>
       </section>
     </div>
 
     <section class="card" style="margin-top:12px">
       <label>Protocol Rule</label>
-      <div style="margin-top:10px;font-size:18px;font-weight:900;letter-spacing:.02em">
+      <div style="margin-top:10px;font-size:18px;font-weight:900;letter-spacing:.02em; position:relative; z-index:1;">
         Silence = Gravity
       </div>
       <div class="footer" style="padding:0;margin-top:8px">
@@ -330,11 +455,42 @@
   function save(data){
     localStorage.setItem(KEY, JSON.stringify(data));
   }
+
+  // Simple hash to avoid showing raw emails on-screen (not security, just UX)
+  function hashEmail(email){
+    let h = 2166136261;
+    for(let i=0;i<email.length;i++){
+      h ^= email.charCodeAt(i);
+      h = Math.imul(h, 16777619);
+    }
+    return ("00000000" + (h >>> 0).toString(16)).slice(-8);
+  }
+
+  function renderLog(){
+    const d = load();
+    const tb = $("logRows");
+    if(!d.witnesses.length){
+      tb.innerHTML = `<tr><td colspan="3" style="padding:12px; color:rgba(255,255,255,.55)">No witnesses yet.</td></tr>`;
+      return;
+    }
+    tb.innerHTML = d.witnesses.slice(0,50).map(w => {
+      const em = (w.email || "").trim().toLowerCase();
+      return `
+        <tr>
+          <td>${(w.ts || "—")}</td>
+          <td>${em ? ("#" + hashEmail(em)) : "—"}</td>
+          <td>${(w.name || "—")}</td>
+        </tr>
+      `;
+    }).join("");
+  }
+
   function render(){
     const d = load();
     $("wCount").textContent = d.witnesses.length;
     $("cCount").textContent = d.confirmations;
     $("lastSeal").textContent = d.lastSeal ? d.lastSeal : "—";
+    renderLog();
   }
 
   $("enter").addEventListener("click", () => {
@@ -345,7 +501,7 @@
       return;
     }
     const d = load();
-    const exists = d.witnesses.some(w => w.email === email);
+    const exists = d.witnesses.some(w => (w.email || "").toLowerCase() === email);
     if(!exists){
       d.witnesses.unshift({email, name, ts: stamp()});
       d.confirmations += 1;
@@ -370,8 +526,165 @@
     render();
   });
 
+  $("export").addEventListener("click", () => {
+    const d = load();
+    const rows = [["timestamp","email","name"], ...d.witnesses.map(w => [w.ts||"", w.email||"", w.name||""])];
+    const csv = rows.map(r => r.map(v => {
+      const s = String(v).replaceAll('"','""');
+      return `"${s}"`;
+    }).join(",")).join("\n");
+
+    const blob = new Blob([csv], {type:"text/csv;charset=utf-8"});
+    const a = document.createElement("a");
+    a.href = URL.createObjectURL(blob);
+    a.download = "APEX_GhostProtocol_WitnessLog.csv";
+    a.click();
+    URL.revokeObjectURL(a.href);
+  });
+
+  $("wipe").addEventListener("click", () => {
+    if(!confirm("Wipe local Ghost Protocol data on this device?")) return;
+    localStorage.removeItem(KEY);
+    $("hint").textContent = "Local registry wiped.";
+    render();
+  });
+
   render();
 })();
 </script>
+
+<script>
+/* APEX PARTICLES — same engine as Translator so both match */
+(() => {
+  const canvas = document.getElementById("apexParticles");
+  if(!canvas) return;
+
+  const ctx = canvas.getContext("2d", { alpha: true });
+  let W=0,H=0,DPR=1;
+  let particles=[];
+  let raf=0;
+
+  const css = getComputedStyle(document.documentElement);
+  const GOLD = (css.getPropertyValue("--gold").trim() || "#D6B35A");
+  const BLUE = (css.getPropertyValue("--blue").trim() || "#6AA8FF");
+
+  const settings = {
+    count: 78,
+    speed: 0.22,
+    linkDist: 150,
+    starSize: 1.35,
+    twinkle: 0.33,
+  };
+
+  const reduce = window.matchMedia && window.matchMedia("(prefers-reduced-motion: reduce)").matches;
+  if(reduce){
+    canvas.style.opacity = ".16";
+    return;
+  }
+
+  function rand(min,max){ return min + Math.random()*(max-min); }
+
+  function resize(){
+    DPR = Math.min(2, window.devicePixelRatio || 1);
+    W = Math.floor(innerWidth);
+    H = Math.floor(innerHeight);
+    canvas.width = Math.floor(W * DPR);
+    canvas.height = Math.floor(H * DPR);
+    canvas.style.width = W + "px";
+    canvas.style.height = H + "px";
+    ctx.setTransform(DPR,0,0,DPR,0,0);
+
+    const target = Math.max(48, Math.min(130, Math.floor((W*H)/17000)));
+    settings.count = target;
+    seed();
+  }
+
+  function seed(){
+    particles = [];
+    for(let i=0;i<settings.count;i++){
+      particles.push({
+        x: rand(0,W), y: rand(0,H),
+        vx: rand(-settings.speed, settings.speed),
+        vy: rand(-settings.speed, settings.speed),
+        r: rand(0.65, settings.starSize),
+        a: rand(0.25, 0.95),
+        hue: Math.random() < 0.62 ? "gold" : "blue",
+        phase: rand(0, Math.PI*2)
+      });
+    }
+  }
+
+  function draw(){
+    ctx.clearRect(0,0,W,H);
+
+    const g = ctx.createRadialGradient(W*0.5,H*0.35, 0, W*0.5,H*0.35, Math.max(W,H)*0.9);
+    g.addColorStop(0,"rgba(214,179,90,.05)");
+    g.addColorStop(0.55,"rgba(106,168,255,.035)");
+    g.addColorStop(1,"rgba(0,0,0,0)");
+    ctx.fillStyle = g;
+    ctx.fillRect(0,0,W,H);
+
+    // Links
+    for(let i=0;i<particles.length;i++){
+      const p = particles[i];
+      for(let j=i+1;j<particles.length;j++){
+        const q = particles[j];
+        const dx = p.x-q.x, dy=p.y-q.y;
+        const d = Math.hypot(dx,dy);
+        if(d < settings.linkDist){
+          const t = 1 - (d/settings.linkDist);
+          ctx.globalAlpha = t*0.20;
+          ctx.lineWidth = 1;
+          ctx.strokeStyle = (p.hue==="gold" || q.hue==="gold")
+            ? "rgba(214,179,90,.55)"
+            : "rgba(106,168,255,.55)";
+          ctx.beginPath();
+          ctx.moveTo(p.x,p.y);
+          ctx.lineTo(q.x,q.y);
+          ctx.stroke();
+        }
+      }
+    }
+
+    // Stars
+    for(const p of particles){
+      p.phase += 0.02;
+      const tw = 1 + Math.sin(p.phase)*settings.twinkle;
+      const color = p.hue === "gold" ? GOLD : BLUE;
+
+      ctx.globalAlpha = Math.max(0.06, Math.min(1, p.a*0.9));
+      ctx.shadowBlur = 18;
+      ctx.shadowColor = color;
+      ctx.fillStyle = color;
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.r*tw, 0, Math.PI*2);
+      ctx.fill();
+
+      ctx.shadowBlur = 0;
+      ctx.globalAlpha = Math.max(0.10, Math.min(1, p.a));
+      ctx.fillStyle = "rgba(255,255,255,.85)";
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, Math.max(0.6, p.r*0.52), 0, Math.PI*2);
+      ctx.fill();
+
+      p.x += p.vx;
+      p.y += p.vy;
+      if(p.x < -20) p.x = W+20;
+      if(p.x > W+20) p.x = -20;
+      if(p.y < -20) p.y = H+20;
+      if(p.y > H+20) p.y = -20;
+    }
+
+    ctx.globalAlpha = 1;
+    raf = requestAnimationFrame(draw);
+  }
+
+  window.addEventListener("resize", resize, {passive:true});
+  resize();
+  cancelAnimationFrame(raf);
+  raf = requestAnimationFrame(draw);
+})();
+</script>
+
 </body>
 </html>
